[gd_scene load_steps=2 format=2]

[ext_resource path="res://Assets/Enimies/Enemy_bullet/CircleBulletPat2.gd" type="Script" id=1]

[node name="CirclePat2" type="Node2D"]
script = ExtResource( 1 )

[node name="Timer_stop" type="Timer" parent="."]
one_shot = true

[node name="Timer_shoot" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="Timer_stop" to="." method="_on_Timer_stop_timeout"]
[connection signal="timeout" from="Timer_shoot" to="." method="_on_Timer_shoot_timeout"]
